--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -477,18 +477,16 @@
     "\n",
     "estimators_localisation = {\n",
     "    \"Localisation\": {\n",
-    "            \"Pointing-Game\": (\n",
-    "                quantus.PointingGame(\n",
+    "            \"Pointing-Game\": {\n",
+    "                \"init\":quantus.PointingGame(\n",
     "                    abs=False,\n",
     "                    normalise=True,\n",
     "                    normalise_func=quantus.normalise_func.normalise_by_max,\n",
     "                    return_aggregate=False,\n",
     "                    aggregate_func=np.mean,\n",
     "                    disable_warnings=True,\n",
-    "                ),\n",
-    "                False,\n",
-    "            ),\n",
-    "             \"Top-K Intersection\": (quantus.TopKIntersection(\n",
+    "             ), \"score_direction_lower_is_better\":False},\n",
+    "             \"Top-K Intersection\": \"init\":(quantus.TopKIntersection(\n",
     "                k=10,\n",
     "                abs=False,\n",
     "                normalise=True,\n",
@@ -496,16 +494,16 @@
     "                return_aggregate=False,\n",
     "                aggregate_func=np.mean,\n",
     "                disable_warnings=True,\n",
-    "             ), False),\n",
-    "             \"Relevance Rank Accuracy\": (quantus.RelevanceRankAccuracy(\n",
+    "             ), \"score_direction_lower_is_better\":False},\n",
+    "             \"Relevance Rank Accuracy\": \"init\":(quantus.RelevanceRankAccuracy(\n",
     "                abs=False,\n",
     "                normalise=True,\n",
     "                normalise_func=quantus.normalise_func.normalise_by_max,\n",
     "                return_aggregate=False,\n",
     "                aggregate_func=np.mean,\n",
     "                disable_warnings=True,\n",
-    "             ), False),\n",
-    "            \"Relevance Mass Accuracy\": (\n",
+    "             ), \"score_direction_lower_is_better\":False},\n",
+    "            \"Relevance Mass Accuracy\": \"init\":(\n",
     "                quantus.RelevanceMassAccuracy(\n",
     "                    abs=False,\n",
     "                    normalise=True,\n",
@@ -514,8 +512,8 @@
     "                    aggregate_func=np.mean,\n",
     "                    disable_warnings=True,\n",
     "                ),\n",
-    "                False,\n",
-    "            ),\n",
+    "                \"score_direction_lower_is_better\":False,\n",
+    "            },\n",
     "        }\n",
     "    }"
    ]
@@ -846,7 +844,7 @@
     "\n",
     "# Run the meta-evaluation.\n",
     "meta_evaluator(\n",
-    "    estimator=estimators[estimator_category][estimator_name][0],\n",
+    "    estimator=estimators[estimator_category][estimator_name][\"init\"],\n",
     "    model=dataset_settings[dataset_name][\"models\"][model_name],\n",
     "    x_batch=dataset_settings[dataset_name][\"x_batch\"],\n",
     "    y_batch=dataset_settings[dataset_name][\"y_batch\"],\n",
@@ -855,7 +853,7 @@
     "    channel_first=True,\n",
     "    softmax=False,\n",
     "    device=device,\n",
-    "    lower_is_better=estimators[estimator_category][estimator_name][1],\n",
+    "    score_direction_lower_is_better=estimators[estimator_category][estimator_name][\"score_direction_lower_is_better\"],\n",
     ")"
    ]
   },
