ran black, bug fix: added 'method' to explain_func_kwargs and estimator restructuring

--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -846,7 +846,7 @@
     "\n",
     "# Run the meta-evaluation.\n",
     "meta_evaluator(\n",
-    "    estimator=estimators[estimator_category][estimator_name][0],\n",
+    "    estimator=estimators[estimator_category][estimator_name]["init"],\n",
     "    model=dataset_settings[dataset_name][\"models\"][model_name],\n",
     "    x_batch=dataset_settings[dataset_name][\"x_batch\"],\n",
     "    y_batch=dataset_settings[dataset_name][\"y_batch\"],\n",
@@ -855,7 +855,7 @@
     "    channel_first=True,\n",
     "    softmax=False,\n",
     "    device=device,\n",
-    "    lower_is_better=estimators[estimator_category][estimator_name][1],\n",
+    "    score_direction_lower_is_better=estimators[estimator_category][estimator_name]["score_direction_lower_is_better"],\n",
     ")"
    ]
   },
