remove quantus code duplication

--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2777b2b",
+   "id": "664528fe",
    "metadata": {},
    "source": [
     "# Getting Started with MetaQuantus\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b0544e08",
+   "id": "0af7f1a6",
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df9c6f48",
+   "id": "71a7ddff",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13cfad90",
+   "id": "cf616a50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365919ef",
+   "id": "57120611",
    "metadata": {},
    "source": [
     "Run below cell if Google Colab is used."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6212fc92",
+   "id": "1224f1d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473fac03",
+   "id": "97996624",
    "metadata": {},
    "source": [
     "## 1) Preliminaries"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "73faed4c",
+   "id": "fe5b491a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63e9ac5",
+   "id": "46067c7c",
    "metadata": {},
    "source": [
     "### 1.1 Load data"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc9a1eb0",
+   "id": "4056db8f",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7723e9e4",
+   "id": "df45dddb",
    "metadata": {},
    "source": [
     "### 1.2 Load explanations"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82bab262",
+   "id": "033995cd",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4d7f4cf",
+   "id": "1f33b85e",
    "metadata": {},
    "source": [
     "### 1.3 Load estimators"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "046afb3a",
+   "id": "9ad4173d",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ad2a2726",
+   "id": "5b6663ac",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fa9f2462",
+   "id": "cfc99847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7587c3bb",
+   "id": "fef2cf08",
    "metadata": {},
    "source": [
     "## 2) Run Meta-Evaluation"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24570f3",
+   "id": "2a5fb0a1",
    "metadata": {},
    "source": [
     "### 2.1 Define test suite\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "086e8a21",
+   "id": "57258885",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "56282012",
+   "id": "983015df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d73c898",
+   "id": "35f39c05",
    "metadata": {},
    "source": [
     "### 2.2 Run MetaQuantus\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "88c1069f",
+   "id": "a7a7e04d",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b91927",
+   "id": "0e3314dd",
    "metadata": {},
    "source": [
     "## 3) Run Benchmarking"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b460a6",
+   "id": "2edf4469",
    "metadata": {},
    "outputs": [
     {
@@ -887,6 +887,238 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Top-K Intersection\n",
+      "UID=8b4b\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003692150115966797,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22e6c5ba56814bbca0a34e62547ee4ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003919839859008789,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71d066a8ee284120bf7dc3d9192486ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0040929317474365234,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74d5cd20e7ca4a5fa95c3aaf8cc02f07",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.004088163375854492,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "638681f186cb4e9fb1917f5355593766",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Relevance Rank Accuracy\n",
+      "UID=8b4b\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0038499832153320312,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c2cc89fc2244d86b503c48eebd089cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.004518270492553711,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b81a5e81bad4a18a831fc4a3ed73418",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -903,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545e50f0",
+   "id": "1d34dfe6",
    "metadata": {},
    "outputs": [],
    "source": []
