added missing import

--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "664528fe",
+   "id": "7cd3f67c",
    "metadata": {},
    "source": [
     "# Getting Started with MetaQuantus\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0af7f1a6",
+   "id": "83da0fd1",
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71a7ddff",
+   "id": "9451238b",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cf616a50",
+   "id": "a0af68d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57120611",
+   "id": "6bde729f",
    "metadata": {},
    "source": [
     "Run below cell if Google Colab is used."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1224f1d2",
+   "id": "5d00558e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97996624",
+   "id": "456b12b0",
    "metadata": {},
    "source": [
     "## 1) Preliminaries"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fe5b491a",
+   "id": "5316533b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46067c7c",
+   "id": "e4f57011",
    "metadata": {},
    "source": [
     "### 1.1 Load data"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4056db8f",
+   "id": "29d80ce7",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df45dddb",
+   "id": "8e0d6f14",
    "metadata": {},
    "source": [
     "### 1.2 Load explanations"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "033995cd",
+   "id": "177f0789",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f33b85e",
+   "id": "22b9e079",
    "metadata": {},
    "source": [
     "### 1.3 Load estimators"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9ad4173d",
+   "id": "8149606e",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5b6663ac",
+   "id": "59417e89",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cfc99847",
+   "id": "44ab0571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef2cf08",
+   "id": "2a3cf45c",
    "metadata": {},
    "source": [
     "## 2) Run Meta-Evaluation"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5fb0a1",
+   "id": "3bb42184",
    "metadata": {},
    "source": [
     "### 2.1 Define test suite\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "57258885",
+   "id": "1fb0bfae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "983015df",
+   "id": "2f632456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f39c05",
+   "id": "5aac55d0",
    "metadata": {},
    "source": [
     "### 2.2 Run MetaQuantus\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a7a7e04d",
+   "id": "6b47b18c",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e3314dd",
+   "id": "862c8ab5",
    "metadata": {},
    "source": [
     "## 3) Run Benchmarking"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2edf4469",
+   "id": "363f76a3",
    "metadata": {},
    "outputs": [
     {
@@ -1119,6 +1119,236 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003598928451538086,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c2adae9ec6f41db8ad83f8927dcf89d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003523111343383789,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0babb1df668f49c89b91b25766e32364",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Relevance Mass Accuracy\n",
+      "UID=8b4b\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006690025329589844,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c3493e224064612841a575f348f6353",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005295991897583008,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45ed129385624448a3961e3521890e2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005388975143432617,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6102cca7f26f4584b717c238fc434ee0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005112886428833008,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18437debc8974c388b1c03e5d64ecdfa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1135,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d34dfe6",
+   "id": "857e5759",
    "metadata": {},
    "outputs": [],
    "source": []
